# gitlab.alfredworkflow

./: .gitignore  Cargo.toml  README.md  RELEASES.md
.github/workflows/: build.yaml
src/: cache.rs  config.rs  gitlab.rs  human.rs  main.rs
workflow/: info.plist
