[package]
name = "gitlab-alfred-workflow"
version = "0.0.0"
authors = ["Ross MacArthur <ross@macarthur.io>"]
edition = "2021"
license = "MIT OR Apache-2.0"
publish = false

[dependencies]
anyhow = "1.0.53"
chrono = "0.4.19"
curl = "0.4.42"
powerpack = "0.3.0"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.78"

[features]
