[package]
name = "gitlab-alfred-workflow"
version = "0.3.2"
authors = ["Ross MacArthur <ross@macarthur.io>"]
edition = "2021"
license = "MIT OR Apache-2.0"
publish = false

[dependencies]
anyhow = "1.0.65"
chrono = "0.4.22"
curl = "0.4.44"
fmutex = "0.1.0"
home = "0.5.3"
log = { version = "0.4.17", features = ["std"] }
once_cell = "1.15.0"
powerpack = { version = "0.4.2", features = ["detach"] }
serde = { version = "1.0.145", features = ["derive"] }
serde_json = "1.0.85"
sha1 = "0.10.5"
